@@ -1,4 +1,8 @@
 
+As 'twixt a miser and his wealth is found;    // Wed Aug 23 2023 07:21:57
+	scripts/index.ts
+
+
 But flowers distill'd though they with winter meet,    // Wed Aug 23 2023 07:09:57
 	alak@5.0.0-up.16
 		 - src/constructor.ts
